--- a/style.css
+++ b/style.css
@@ -10,8 +10,10 @@ body{
 .vizitka{
     background-color: white;
     text-align: center;
-    margin: 150px;
+    margin-top: 150px;
     width: 550px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 img{
